tests/negative/gold/utf8_test.gold
tests/negative/utf8_test.toit:4:17: error: Can't call result of evaluating expression
  "ğ„ğ„" + ("ğ„ğ„" 3)
          ^~~~
tests/negative/utf8_test.toit:5:3: error: Can't call result of evaluating expression
  "ğ„ğ„" 3
  ^~~~
Compilation failed.
